corrected essentialactions + sample-angular

--- a/reactivemongo/samples/sample-angular/conf/application.conf
+++ b/reactivemongo/samples/sample-angular/conf/application.conf
@@ -56,5 +56,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-mongodb.uri ="mongodb://username:password@localhost:27017/resources"
+mongodb.uri ="mongodb://username:password@localhost:27017/persons"
 
