--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.class
 *.log
+.DS_Store
 
 # sbt specific
 dist/*
@@ -11,3 +12,8 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+
+# Idea
+
+.idea/
+.idea_modules/
