Update sample app

--- a/couchbase/samples/sample/conf/application.conf
+++ b/couchbase/samples/sample/conf/application.conf
@@ -19,22 +19,21 @@ akka {
 }
 
 couchbase {
-  execution-context {
-    timeout=1000
-    pollfutures=true
-    polldelay=5
+  actorctx {
+    timeout=30000
     execution-context {
       fork-join-executor {
-        parallelism-factor = 20.0
-        parallelism-max = 200
+        parallelism-factor = 5.0
+        parallelism-max = 50
       }
     }
   }
   buckets = [{
-    host=["127.0.0.1","127.0.0.1"]
+    host="127.0.0.1"
     port="8091"
     base="pools"
     bucket="default"
+    user=""
     pass=""
     timeout="0"
   }]
